--- a/style/sass/components/_features.scss
+++ b/style/sass/components/_features.scss
@@ -16,7 +16,7 @@
         position: absolute;
         z-index: 5;
         top: -135px;
-        inset-inline-end: -33%;
+        inset-inline-end: -25%;
         width: 1280px;
     }
     .general-title {
@@ -39,6 +39,8 @@
     }
     
 }
+
+
 .features-parent{
    display: flex;
    justify-content: flex-start;
@@ -87,14 +89,23 @@
     }
 }
 
-@include max-1300{
+@media screen and (max-width : 1600px) {
     .features .mobile-hand-img{
-        inset-inline-end: -46%;
-    }
+        inset-inline-end: -35%;
+    } 
 }
 
 
+@include max-1300{
+    .features .mobile-hand-img{
+        inset-inline-end: -45%;
+    } 
+}
+
 @include max-1200{
+    .features .mobile-hand-img{
+        inset-inline-end: -44%;
+    } 
     .features .general-title{
         font-size: 30px;
         line-height: 1.5;
@@ -103,7 +114,7 @@
         width: 470px;
     }
     .features .mobile-hand-img{
-        width: 1100px;
+        width: 1000px;
         top: -100px;
     }
     .features{
