--- a/style/sass/components/_mainBanner.scss
+++ b/style/sass/components/_mainBanner.scss
@@ -71,13 +71,17 @@
   @media screen and (max-width : 1930px) {
     .hero-mobile{
       width: 600px;
+      bottom: -10px;
+      inset-inline-end: -13%;
     }
   }
 
   
   @media screen and (max-width : 1600px) {
     .hero-mobile{
-      width: 500px ;
+      width: 500px;
+      bottom: -25px;
+      inset-inline-end: 0;
     }
   }
 
@@ -141,14 +145,15 @@
   .hero-mobile{
     width: 445px;
     inset-inline-end: 0;
+    bottom: 25px;
   }
 }
 
 @include max-992 {
   .hero-mobile{
-    width: 315px;
-    inset-inline-end: 0;
-    bottom: 20px;
+    width: 356px;
+    inset-inline-end: -54px;
+    bottom: 36px;
   }
   .banner-desc .main-title{
     font-size: 30px;
